# ClassistAnt

./: README.md  output  package.json
src/: App.module.css  App.tsx  Style.module.css  main.tsx  react-tab.css  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: algorithm.rs  input.rs  main.rs  read_csv.rs  table_editor.rs
src-tauri/src/algorithm/: aco.rs  time_table.rs
src-tauri/src/algorithm/aco/: Grid.tsx  aco_parameters.rs  aco_solver.rs  ant.rs  colony.rs  graph.rs  violations.rs
src-tauri/src/algorithm/time_table/: cell.rs
src-tauri/src/input/: class.rs  column.rs  room.rs  student_group.rs  teacher.rs
src-tauri/src/table_editor/: class.rs  column.rs  room.rs  student_group.rs  teacher.rs
src/Generator/: Generator.tsx
src/Generator/Grid/: Grid.module.css  Grid.tsx
src/Generator/Grid/Draggable/: Draggable.tsx
src/Generator/Grid/Droppable/: Droppable.tsx
src/Generator/Grid/Period/: Period.tsx
src/Generator/Grid/RoomIndex/: RoomIndex.tsx
src/Generator/Input/: Input.ts
src/TableEditor/: TableEditor.tsx
src/TableEditor/Table/: Table.module.css  Table.tsx
src/modules/: color.ts
